--- a/resume.html
+++ b/resume.html
@@ -46,8 +46,9 @@
 					<td>
 						<h4 class="border">PROJECTS</h4>
 						<ul class="project-list">
-							<li><a href="www.pollarise.co">Poll Arise</a>: Outputs which politicians a user is most and least similar to based on their Twitter presence. Technologies used: Pug, CSS, JavaScript, Node.js, MongoDB, IBM Watson, Twitter API, Angular2 templating</li>
-							<li><a href="http://papayawhip.herokuapp.com/">Current</a>: Interactive productivity tracker and pomodoro timer that is based on the psychological concept of “flow”. User is prompted to take breaks and productivity data is collected through surveys. Technologies used: HTML, CSS, JavaScript, Node.js, MongoDB.</li>
+							<li><a href="www.pollarise.co">Poll Arise</a>: Outputs which politicians a user is most and least similar to based on their Twitter presence. Technologies used: Pug, CSS, JavaScript, Node.js, MongoDB, IBM Watson, Twitter API, Angular2 templating. Hosted on Heroku.</li>
+							<li><a href="http://papayawhip.herokuapp.com/">Current</a>: Interactive productivity tracker and pomodoro timer that is based on the psychological concept of “flow”. User is prompted to take breaks and productivity data is collected through surveys. Technologies used: HTML, CSS, JavaScript, Node.js, MongoDB. Hosted on Heroku.</li>
+							<!-- <li><a href="">Psychology Independent Research</a>: Conducted upper-level research for senior graduation requirement on media's influence on perceptions of queered sexuality. Organized literature review of over 45 articles and sources, transcribed 15 hours of interviews and analyzed transcriptions using qualitative and quantitative techniques, completed 60-page APA-formatted research paper and presented findings at a student research conference.</li> -->
 						</ul>
 					</td>
 				</tr>
@@ -60,7 +61,7 @@
 						<ul>
 							<li>Dean's List, Fall 2015</li>
 							<li>Pi Beta Phi Fraternity for Women, member, 2011-2015</li>
-							<li>Champtions are Readers, volunteer, 2012-2015</li>
+							<li>Champions are Readers, volunteer, 2012-2015</li>
 						</ul>
 						<img id="DSonSeal" src="http://www2.dickinson.edu/plan/images/red200.gif" alt="collegeRose">
 						<h5>The University of Queensland</h5>
@@ -301,7 +302,7 @@
 									</span> 
 								</td>
 							</tr>		
-							<tr>	
+							<!-- <tr>	
 								<td>
 									<p class="text">Apple OSX & iOS</p>
 								</td>
@@ -315,8 +316,8 @@
 										<i class="fa fa-square" aria-hidden="true"></i> 
 									</span> 
 								</td>
-							</tr>
-							<tr>	
+							</tr> -->
+							<!-- <tr>	
 								<td>
 									<p class="text">Microsoft Windows</p>
 								</td>
@@ -330,7 +331,7 @@
 										<i class="fa fa-square grey" aria-hidden="true"></i> 
 									</span> 
 								</td>
-							</tr>
+							</tr> -->
 							<tr>	
 								<td>
 									<p class="text">Social Media Platforms</p>
@@ -377,7 +378,7 @@
 	
 			<div class="relevantExperience">
 				<table class="col-md-9 col-md-pull-3">
-					<tr>
+					<tr class="noPadding">
 						<td colspan="2">
 							<h4 class="border">RELEVANT EXPERIENCE</h4>
 						</td>
@@ -393,12 +394,12 @@
 						</td>
 					</tr>
 					<tr>
-						<td colspan="2"> 
+						<td colspan="2" class="expPadding"> 
 							<h6 class="desc">An immersive JavaScript training program with over 700 hours of project-based full-stack web development</h6>
 							<ul>
 								<li>Learned MEAN stack and other front-end and back-end development tools while creating projects individually and collaboratively</li>
 								<li>Designed and created fully-functioning and exceptionally creative projects from wireframe stage to deployment using agile principles, object-oriented programming, MVC framework, and functional programming</li>
-								<li>•	Developed a dynamic web application, Poll Arise, built on my passion for psychology. Developed the minimal viable product incorporating the MEAN stack, IBM Watson services, and Twitter API. Hosted by Heroku at www.pollarise.co</li>
+								<li>Developed a dynamic web application, Poll Arise, built on my passion for psychology. Developed a MVP incorporating the MEAN stack, IBM Watson services, and Twitter API. Hosted by Heroku at www.pollarise.co</li>
 							</ul>
 						</td>
 					</tr>
@@ -413,7 +414,7 @@
 						</td>
 					</tr>
 					<tr>
-						<td colspan="2"> 
+						<td colspan="2" class="expPadding"> 
 							<h6 class="desc">Regularly named one of the best restaurants in Boulder, a fine-dining establishment that prides itself in customer service</h6>
 							<ul>
 								<li>Ensured guest satisfaction by maintaining a professional and positive demeanor; highly knowledgeable of seasonal food and beverage menus</li>
@@ -421,7 +422,7 @@
 							</ul>
 						</td>
 					</tr>
-					<tr>
+					<!-- <tr>
 						<td>
 							<h5>Urban Outfitters</h5>
 							<h6 class="head2">Sales Associate</h6>
@@ -432,18 +433,18 @@
 						</td>
 					</tr>
 					<tr>
-						<td colspan="2"> 
+						<td colspan="2" class="expPadding"> 
 							<h6 class="desc">A popular retail chain with a focus on younger generational trends in fashion, accessories, and quirky home-decor</h6>
 							<ul>
 								<li>Assisted customers find products that fit their personal requests and needs</li>
 								<li>Provided excellent customer service at all times; handled guest conflict with tact to ensure an enjoyable shopping experience</li>
 							</ul>
 						</td>
-					</tr>
+					</tr> -->
 					<tr>
 						<td>
 							<h5>ESPoused Events</h5>
-							<h6 class="head2">Intern</h6>
+							<h6 class="head2">Intern / Associate</h6>
 						</td>
 						<td>
 							<p>Rumson, NJ</p>
@@ -451,13 +452,14 @@
 						</td>
 					</tr>
 					<tr>
-						<td colspan="2">
+						<td colspan="2" class="expPadding">
 							<h6 class="desc">A boutique event production and design house that offers customizable services tailor-fitted for client visions</h6> 
 							<ul>
-								<li>Attended to administrative duties: answered emails, placed event orders, and organized files, event photos, and client information; promoted events and managed social media</li>
-								<li>Maintained a high level of knowledge of collateral trends by following social media sites</li>
-								<li>Assisted in building a strong portfolio of venues and wholesale vendors e.g. Etsy</li>
+								<li>Managed social media and promoted events</li>
+								<li>Tracked and analyzed social media trends including events, fashion, music, and design</li>
+								<li>Assisted in building venue and wholesale vendor portfolios across the entire company</li>
 								<li>Created informational event proposal kits for client use</li>
+								<li>Attended to administrative duties: executed event orders, organized files, event photos, and client information, and answered emails</li>
 							</ul>
 						</td>
 					</tr>
@@ -472,13 +474,35 @@
 						</td>
 					</tr>
 					<tr>
-						<td colspan="2"> 
+						<td colspan="2" class="expPadding"> 
 							<h6 class="desc">Upper-level independent research conducted under the supervision of Doctor of Psychology advisor for senior graduation requirement</h6>	
 							<ul>	
 								<li>Organized literature review of over 45 articles and sources</li>
 								<li>Transcribed 15 hours of interviews and analyzed transcriptions using qualitative and quantitative techniques</li>
 								<li>Wrote and completed a 60-page APA-formatted research paper</li>
 								<li>Presented findings at a student research conference</li>
+							</ul>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<h5>WIRED</h5>
+							<h5>WIRED Cafe at Comic-Con</h5>
+							<h6 class="head2">Coordinator Intern</h6>
+							<!-- <h6 class="head2">Intern</h6> -->
+						</td>
+						<td>
+							<p>New York, NY • Summer 2014</p>
+							<p>San Diego, CA • Summer 2013</p>
+						</td>
+					</tr>
+					<tr>
+						<td colspan="2" class="expPadding"> 
+							<h6 class="desc">Two internships focused on event planning at one of the largest comic conventions and administrative duties for major tech magazine, WIRED</h6>	
+							<ul>
+								<li>Helped curate over 30 Southern California start-ups to attend WIRED Cafe at Comic-Con</li>
+								<li>Oversaw the RSVP process for 3,000 WIRED Cafe at Comic-Con attendees</li>
+								<li>Managed and expedited event kit fulfillment and shipment from San Diego to the WIRED offices in New York City</li>
 							</ul>
 						</td>
 					</tr>
@@ -493,7 +517,7 @@
 						</td>
 					</tr>
 					<tr>
-						<td colspan="2"> 
+						<td colspan="2" class="expPadding"> 
 							<h6 class="desc">A selective mentorship program that provides transitional support to new college students throughout their first year</h6>	
 							<ul>
 								<li>Mentored 18 first year students; met bi-monthly with each student to ensure smooth transition</li>
@@ -512,33 +536,11 @@
 						</td>
 					</tr>
 					<tr>
-						<td colspan="2"> 
+						<td colspan="2" class="expPadding"> 
 							<h6 class="desc">Officially elected vice-president position resonsible for alumnae-relations and official event planning and coordinating</h6>	
 							<ul>
 								<li>Planned sisterhood, alumnae, and formal events for 250+ guests; selected vendors, negotiated contracts, and made payments frequently over $1500</li>
 								<li>Responsible for risk management; organized monthly workshops and educational seminars</li>
-							</ul>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<h5>WIRED | WIRED Cafe at Comic-Con</h5>
-							<h6 class="head2">Intern</h6>
-							<h6 class="head2">Intern</h6>
-						</td>
-						<td>
-							<p>New York, NY • July 2014</p>
-							<p>San Diego, CA • July 2013</p>
-						</td>
-					</tr>
-					<tr>
-						<td colspan="2"> 
-							<h6 class="desc">Two internships focused on event planning at one of the largest comic conventions and administrative duties for major tech magazine, WIRED</h6>	
-							<ul>
-								<li>Researched over 30 Southern California start-ups to help grow WIRED Cafe at Comic-Con audience</li>
-								<li>Oversaw the RSVP process for 3,000 WIRED Cafe at Comic-Con attendees</li>
-								<li>Managed product shipment of 150 boxes from San Diego to the WIRED offices in New York City</li>
-								<li>Attended to office administrative duties</li>
 							</ul>
 						</td>
 					</tr>
@@ -553,7 +555,7 @@
 						</td>
 					</tr>
 					<tr>
-						<td colspan="2"> 
+						<td colspan="2" class="expPadding"> 
 							<h6 class="desc">Major day-to-day music managment company that works with big names such as Maroon 5, Robin Thicke, A$ap Rocky and Rick Springfield</h6>	
 							<ul>
 								<li>Managed social media presence; conducted research and produced social media reports for over 30 artists across 10 social media sites and number-reporting companies, e.g Billboard</li>
@@ -561,7 +563,8 @@
 								<li>Improved the company's organizational and file-management systems</li>
 							</ul>
 						</td>
-					</tr>							
+					</tr>
+					</div>							
 				</table>
 			</div>
 
