added resources site to portfolio

--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
 					<h2 class="portfolio-header header-font">Project Portfolio</h2>
 					<p class="portfolio-header-text body-font">Here, you will find a number of projects that I worked as side projects on and while at CodeCraft. Each project header will either link to the project itself or the GitHub repository depending on the technology used.</p>
 					<div class="portfolio-item">
+						<a href="http://jsresourcessite.herokuapp.com/" target="_blank"><h3 class="portfolio-item-header header-font">JavaScript (&amp; more!) Resources Site</h3></a>
+						<p class="body-font"> Built in an afternoon, this site includes all of the resources I use in development. <strong>Technologies used:</strong> HTML, CSS/ Twitter Bootstrap, &amp; JavaScript/jQuery. Hosted on Heroku</p>
+					</div>
+					<div class="portfolio-item">
 						<a href="https://hire-charlotte-haiku.herokuapp.com/" target="_blank"><h3 class="portfolio-item-header header-font">Why You Should Hire Charlotte: Haiku Generator</h3></a>
 						<p class="body-font"> Built in two hours, a fun web application  that generates a random haiku as to why you should hire me! <strong>Technologies used:</strong> HTML, CSS/ Twitter Bootstrap, &amp; JavaScript/jQuery. Hosted on Heroku</p>
 					</div>
